<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/azul"
    tools:context=".activity.CadNotasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbDisciplinas"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spDisciplinas"
                android:background="@color/azulClaro"
                android:layout_marginTop="4dp"
                android:minHeight="30dp">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbPeriodo"
                android:layout_marginTop="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/edtPeriodo"
                android:background="@color/branco"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:minHeight="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="60dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbAv1b1"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="0"
                        android:id="@+id/edtAv1b1"
                        android:minWidth="140dp"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbAv1b2"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv1b2"
                        android:inputType="numberDecimal"
                        android:hint="0"
                        android:minWidth="140dp"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbAv2"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv2"
                        android:inputType="numberDecimal"
                        android:hint="0"
                        android:minWidth="140dp"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbAv3"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv3"
                        android:inputType="numberDecimal"
                        android:hint="0"
                        android:minWidth="140dp"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbParcial"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:hint="0"
                        android:background="@color/branco"
                        android:id="@+id/edtAv1b1P"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbParcial"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv1b2P"
                        android:minWidth="140dp"
                        android:hint="0"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbParcial"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv2P"
                        android:minWidth="140dp"
                        android:hint="0"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbParcial"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAv3P"
                        android:minWidth="140dp"
                        android:hint="0"
                        android:background="@color/branco"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:layout_marginTop="4dp"
                        android:minHeight="30dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"
                android:text="@string/lbTotal"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtMediaFinal"
                android:inputType="numberDecimal"
                android:hint="0"
                android:minWidth="140dp"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:background="@color/azulClaro"
                android:layout_marginTop="4dp"
                android:minHeight="35dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btGravar"
                    android:id="@+id/btnGravar"
                    android:layout_weight=".5"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btCalcular"
                    android:id="@+id/btnCalcular"
                    android:layout_weight=".5"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
